# quantum-era-design

./: .gitignore  README.md  components.d.ts  index.html  package.json  vite.config.ts
doc/: project.md
icons/: icon_世界穹顶.psd  icon_冬季.psd  icon_冰雪旅馆.psd  icon_喵喵.psd  icon_夏季.psd  icon_尤里卡.psd  icon_春季.psd  icon_橘子汽水.psd  icon_玫瑰饼干.psd  icon_秋季.psd  icon_群星之夜.psd  icon_蓝图.psd  icon_雪山.psd
src/: App.vue  main.css  main.ts  vite-env.d.ts
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/data/extension/simx/: index.json
src-tauri/data/extension/simx/handler/core/: core.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/compiler/: compile.rs
src-tauri/src/executor/: exec.rs
src-tauri/src/handle/: dir.rs  files.rs  mod.rs  net.rs  system.rs
src-tauri/src/project/: project.rs
src-tauri/src/resolver/: resolve.rs
src/api/: http.ts
src/assets/fonts/: index.css
src/components/: CollapsibleMenu.vue  CollapsibleTools.vue  DropzoneBackground.vue  ExtensionItem.vue  ExtensionList.vue  MainMenu.vue  NaveItem.vue  NaveMenuButtom.vue  NavePanel.vue
src/core/: blueprint.ts  compiler.ts  event.ts  flowable.ts  init.ts  parsing.ts  plugin.ts  project.ts
src/entity/: design.ts
src/node/: Exec.vue  Note.vue  Pack.vue  Start.vue
src/pages/: Design.vue  Extension.vue  Setting.vue  Workspace.vue
src/panel/: AIPanel.vue  AttrPanel.vue  ConsolePanel.vue  ContainerPanel.vue  NodesPanel.vue  ProjectPanel.vue
src/store/: configuration.ts  flow.ts  project.ts  runtime.ts
src/tools/: dialog.ts  logs.ts  message.ts  os.ts
src/types/: common.ts  plugin.ts  project.ts
