[package]
name = "Design"
version = "1.0.0"
description = "Simx Era Design"
authors = ["NJ Labs"]
edition = "2021"

[lib]
name = "design_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.11", features = ["blocking", "json"] }
tokio = { version = "1", features = ["full"] }
tauri-plugin-dialog = "2.2.0"
tauri-plugin-http = "2"
tauri-plugin-os = "2"
tauri-plugin-store = "2"
tauri-plugin-log = "2"
tauri-plugin-upload = "2"
log = "0.4.25"
