[package]
name = "Studio"
version = "1.3.0"
description = "Era Studio"
authors = ["zhsaen"]
edition = "2024"

[lib]
name = "design_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.11", features = ["blocking", "json"] }
tauri-plugin-dialog = "2.2.0"
tauri-plugin-http = "2"
tauri-plugin-os = "2"
tauri-plugin-store = "2"
tauri-plugin-log = "2"
tauri-plugin-upload = "2"
log = "0.4.27"
zip = "4.3.0"
walkdir = "2.3"

# 允许 LLVM 执行更好地优化。
[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
